# c-async

./: ARCHITECTURE.md  CMakeLists.txt  README.md  build.sh  setup.sh  shell.nix
common/: CMakeLists.txt
common/generic/: generic.h  map.h  vector.h
examples/: CMakeLists.txt
examples/hello-world/: CMakeLists.txt  main.c
examples/http-client/: CMakeLists.txt  main.c
io/: CMakeLists.txt
io/src/: common.h  iouring.c
io/src/include/async-io/: io.h  socket.h
src/: common.c  common.h  scheduler.c  scheduler.h  tasks.c  tasks.h
src/arch/: stack.h  task_switching.c  task_switching.h
src/arch/unix-x86_64/: cpu.h  stack.c  task_switching.asm  task_switching.c  task_switching.h
src/include/: async.h
